used CSS to figure out the showcase bug.  Buttons just were't showing because the pics were too big.  lightly styled Showcase.js, now move on to the name form

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -120,3 +120,13 @@
     flex-direction: column;
     align-items: center;
 }
+
+.workImg {
+    width: 50%;
+}
+
+.imgCont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
